# cookieninja

./: .versionrc  CHANGELOG.md  MANIFEST.in  README.md  pyproject.toml  setup.cfg  setup.py
.github/: ISSUE_TEMPLATE.md
.github/workflows/: rebase.yml
cookiecutter/: main.py  prompt.py  repository.py
cookieninja/: cli.py  config.py  environment.py  exceptions.py  extensions.py  find.py  generate.py  hooks.py  log.py  main.py  prompt.py  replay.py  repository.py  utils.py  vcs.py  zipfile.py
docs/: conf.py  index.rst  usage.rst
docs/advanced/: dependent_questions.rst  index.rst  jinja2_custom_delimiter.rst  template_extensions.rst  user_config.rst
tests/: conftest.py  test_cli.py  test_cookiecutter_invocation.py  test_cookiecutter_local_no_input.py  test_cookiecutter_local_with_input.py  test_custom_extensions_in_hooks.py  test_default_extensions.py  test_environment.py  test_exceptions.py  test_find.py  test_generate_context.py  test_generate_copy_without_render.py  test_generate_copy_without_render_override.py  test_generate_file.py  test_generate_files.py  test_generate_hooks.py  test_get_config.py  test_get_user_config.py  test_hooks.py  test_log.py  test_main.py  test_output_folder.py  test_prompt.py  test_read_repo_password.py  test_read_user_choice.py  test_read_user_dict.py  test_read_user_variable.py  test_read_user_yes_no.py  test_repo_not_found.py  test_specify_output_dir.py  test_templates.py  test_time_extension.py  test_utils.py
tests/replay/: conftest.py  test_dump.py  test_load.py  test_replay.py
tests/repository/: test_abbreviation_expansion.py  test_determine_repo_dir_clones_repo.py  test_determine_repo_dir_finds_existing_cookiecutter.py  test_determine_repo_dir_finds_subdirectories.py  test_determine_repository_should_use_local_repo.py  test_is_repo_url.py  test_repository_has_cookiecutter_json.py
tests/test-extensions/local_extension/local_extensions/: main.py
tests/vcs/: test_clone.py  test_identify_repo.py  test_is_vcs_installed.py
tests/zipfile/: test_unzip.py
